--- a/works/ad.html
+++ b/works/ad.html
@@ -80,11 +80,11 @@
             <!--Hero-->
             <div class="home-hero relative rounded-b-3xl bg-[#3696e9] bg-center bg-no-repeat px-4 pt-32 lg:rounded-b-[80px]">
                 <!--Caption-->
-                <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center pt-20 text-center text-white">
+                <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center text-center text-white md:pt-20">
                     <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
                         SaaS, Productivity <span class="ml-4 border-l pl-4"><img src="../assets/images/flag-USA.avif" alt="" class="h-6" /></span>
                     </p>
-                    <h1 class="mx-auto mb-16 max-w-5xl text-center text-3xl font-bold !leading-snug md:text-5xl xl:text-5xl">Optimizing Design and Code for anydone: Crafting a Responsive, Pixel-Perfect Web Experience</h1>
+                    <h1 class="mx-auto mb-8 max-w-5xl text-center text-3xl font-bold !leading-snug md:mb-16 md:text-5xl xl:text-5xl">Optimizing Design and Code for anydone: Crafting a Responsive, Pixel-Perfect Web Experience</h1>
                     <img src="../assets/images/ad-web.png" alt="" class="rounded-t-lg" />
                 </div>
             </div>
@@ -139,52 +139,52 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="mt-20">
+                <!--Design Process-->
+                <div class="">
                     <h3 class="mb-3 text-2xl lg:text-3xl">Design Process</h3>
-                    <div class="relative mt-20 px-2">
+                    <div class="relative mt-12 px-2 md:mt-20">
                         <div class="">
                             <div class="start flex items-start justify-between">
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#3696e9]"></div></div>
-                                        <div class="uppercase tracking-widest">Discovery</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#3696e9] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Discovery</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#3696e9]"></div></div>
-                                        <div class="uppercase tracking-widest">Strategy</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#3696e9] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Strategy</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#3696e9]"></div></div>
-                                        <div class="uppercase tracking-widest">Prototyping</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#3696e9] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Prototyping</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#3696e9]"></div></div>
-                                        <div class="uppercase tracking-widest">Design</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#3696e9] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Design</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#3696e9]"></div></div>
-                                        <div class="uppercase tracking-widest">Development</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#3696e9] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Development</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#3696e9]"></div></div>
-                                        <div class="uppercase tracking-widest">Testing</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#3696e9] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Testing</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#3696e9]"></div></div>
-                                        <div class="uppercase tracking-widest">Optimize</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#3696e9]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#3696e9] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Optimize</div>
                                     </div>
                                 </div>
                             </div>
@@ -198,8 +198,8 @@
         </div>
 
         <!--Banner 1-->
-        <div class="h-screen bg-[url('../images/insellerate-banner.jpg')] bg-cover bg-scroll bg-center bg-no-repeat md:bg-fixed"></div>
-        <p class="p-4 text-center font-light italic">Trendy angled mockups of Insellerate… but you are gonna learn all about this app in this case study!</p>
+        <div class="mt-12 h-[30vh] bg-[url('../images/ad-banner.png')] bg-cover bg-scroll bg-center bg-no-repeat md:h-screen md:bg-fixed"></div>
+        <p class="p-4 text-center font-light italic">Trendy angled mockups of anydone but you are gonna learn all about this product in this case study!</p>
 
         <!--How it started-->
         <div class="py-16 lg:py-32">
@@ -354,7 +354,7 @@
                 </ul>
                 <p>I designed the flow to guide users step-by-step, ensuring a smooth and intuitive experience.</p>
 
-                <img src="../assets/images/ad-legend.png" class="mx-auto mt-8 max-w-xl" alt="" />
+                <img src="../assets/images/ad-legend.png" class="mx-auto mt-8 w-full max-w-xl" alt="" />
 
                 <h3 class="mb-4 mt-12 text-2xl lg:text-3xl">Create a new user</h3>
                 <img src="../assets/images/ad-flow.png" alt="" />
@@ -426,11 +426,11 @@
                     </div>
                     <div class="md:col-span-4">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Color palette</h3>
-                        <div class="mb-4 rounded bg-[#00BCF1] p-5 text-xl tracking-widest text-white">#00BCF1</div>
-                        <div class="mb-4 rounded bg-[#008ABE] p-5 text-xl tracking-widest text-white">#008ABE</div>
-                        <div class="mb-4 rounded bg-[#eef4ff] p-5 text-xl tracking-widest text-dark">#eef4ff</div>
-                        <div class="mb-4 rounded bg-[#212529] p-5 text-xl tracking-widest text-white">#212529</div>
-                        <div class="mb-4 rounded border bg-[#FFFFFF] p-5 text-xl tracking-widest text-dark">#FFFFFF</div>
+                        <div class="text-md mb-4 rounded bg-[#00BCF1] p-3 tracking-widest text-white md:p-5 md:text-xl">#00BCF1</div>
+                        <div class="text-md mb-4 rounded bg-[#008ABE] p-3 tracking-widest text-white md:p-5 md:text-xl">#008ABE</div>
+                        <div class="text-md mb-4 rounded bg-[#eef4ff] p-3 tracking-widest text-dark md:p-5 md:text-xl">#eef4ff</div>
+                        <div class="text-md mb-4 rounded bg-[#212529] p-3 tracking-widest text-white md:p-5 md:text-xl">#212529</div>
+                        <div class="text-md mb-4 rounded border bg-[#FFFFFF] p-3 tracking-widest text-dark md:p-5 md:text-xl">#FFFFFF</div>
                     </div>
                 </div>
             </div>
@@ -523,7 +523,7 @@
                 <div class="mx-auto max-w-7xl px-4">
                     <h1 class="mb-8 text-center text-4xl md:text-left lg:text-6xl">More to explore</h1>
                     <div class="grid grid-cols-1 justify-between gap-x-8 gap-y-8 md:grid-cols-2">
-                        <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
+                        <div class="items-center justify-end gap-x-5 md:flex lg:gap-x-8">
                             <a href="patientmatic"><img src="../assets/images/patientmatci-web.png" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             <div>
                                 <a href="patientmatic" class="mb-2 inline-flex items-center rounded-full text-sm uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-xl"></i> Previous </a>
@@ -536,7 +536,7 @@
                         </div>
 
                         <div class="text-right">
-                            <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
+                            <div class="items-center justify-end gap-x-5 md:flex lg:gap-x-8">
                                 <div>
                                     <a href="aja-dynasty" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
                                     <a href="aja-dynasty" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-xl">Redefining B2C Shopping for Aja Dynasty: A User-Centric Approach to Seamless E-commerce Design</h3></a>
@@ -545,7 +545,7 @@
                                             B2C, E-Commerce <span class="ml-4 border-l pl-4"><img src="../assets/images/nepal-flag.svg" alt="" class="h-6" /></span></p
                                     ></a>
                                 </div>
-                                <a href="aja-dynasty"><img src="../assets/images/aja-web.png" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
+                                <a href="aja-dynasty"><img src="../assets/images/aja-web.png" alt="" class="ml-auto h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             </div>
                         </div>
                     </div>
