--- a/works/aja-dynasty.html
+++ b/works/aja-dynasty.html
@@ -80,11 +80,11 @@
             <!--Hero-->
             <div class="home-hero relative rounded-b-3xl bg-black bg-center bg-no-repeat px-4 pt-32 lg:rounded-b-[80px]">
                 <!--Caption-->
-                <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center pt-20 text-center text-white">
+                <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center text-center text-white md:pt-20">
                     <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
                         B2C, E-Commerce <span class="ml-4 border-l pl-4"><img src="../assets/images/nepal-flag.svg" alt="" class="h-6" /></span>
                     </p>
-                    <h1 class="mx-auto mb-16 max-w-5xl text-center text-3xl font-bold !leading-snug md:text-5xl xl:text-5xl">Redefining B2C Shopping for Aja Dynasty: A User-Centric Approach to Seamless E-commerce Design</h1>
+                    <h1 class="mx-auto mb-8 max-w-5xl text-center text-3xl font-bold !leading-snug md:mb-16 md:text-5xl xl:text-5xl">Redefining B2C Shopping for Aja Dynasty: A User-Centric Approach to Seamless E-commerce Design</h1>
                     <img src="../assets/images/aja-web.png" alt="" class="rounded-t-lg" />
                 </div>
             </div>
@@ -151,51 +151,51 @@
                 </div>
 
                 <!--Design Process-->
-                <div class="mt-16">
+                <div class="mt-12">
                     <h3 class="mb-3 text-2xl lg:text-3xl">Design Process</h3>
-                    <div class="relative mt-20 px-2">
+                    <div class="relative mt-12 px-2 md:mt-20">
                         <div class="">
                             <div class="start flex items-start justify-between">
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
-                                        <div class="uppercase tracking-widest">Research</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#BD9456] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Research</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
-                                        <div class="uppercase tracking-widest">Plan</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#BD9456] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Plan</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
-                                        <div class="uppercase tracking-widest">Design</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#BD9456] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Design</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
-                                        <div class="uppercase tracking-widest">Prototype</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#BD9456] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Prototype</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
-                                        <div class="uppercase tracking-widest">Test</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#BD9456] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Test</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
-                                        <div class="uppercase tracking-widest">Launch</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#BD9456] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Launch</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
-                                        <div class="uppercase tracking-widest">Optimize</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#BD9456] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Optimize</div>
                                     </div>
                                 </div>
                             </div>
@@ -209,7 +209,7 @@
         </div>
 
         <!--Banner 1-->
-        <div class="h-screen bg-[url('../images/aja-banner.png')] bg-cover bg-scroll bg-center bg-no-repeat md:bg-fixed"></div>
+        <div class="mt-12 h-[30vh] bg-[url('../images/aja-banner.png')] bg-cover bg-scroll bg-center bg-no-repeat md:mt-0 md:h-screen md:bg-fixed"></div>
 
         <!--How it started-->
         <div class="py-16 lg:py-32">
@@ -363,12 +363,12 @@
                     </div>
                     <div class="md:col-span-4">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Color palette</h3>
-                        <div class="mb-4 rounded bg-[#BD9456] p-5 text-xl tracking-widest text-white">#BD9456</div>
-                        <div class="mb-4 rounded bg-[#9D7943] p-5 text-xl tracking-widest text-white">#9D7943</div>
-                        <div class="mb-4 rounded bg-[#1E1E19] p-5 text-xl tracking-widest text-white">#1E1E19</div>
-                        <div class="mb-4 rounded bg-[#000000] p-5 text-xl tracking-widest text-white">#000000</div>
-                        <div class="mb-4 rounded border bg-[#E5E3D6] p-5 text-xl tracking-widest text-dark">#E5E3D6</div>
-                        <div class="mb-4 rounded border bg-[#FFFFFF] p-5 text-xl tracking-widest text-dark">#FFFFFF</div>
+                        <div class="text-md mb-4 rounded bg-[#BD9456] p-3 tracking-widest text-white md:p-5 md:text-xl">#BD9456</div>
+                        <div class="text-md mb-4 rounded bg-[#9D7943] p-3 tracking-widest text-white md:p-5 md:text-xl">#9D7943</div>
+                        <div class="text-md mb-4 rounded bg-[#1E1E19] p-3 tracking-widest text-white md:p-5 md:text-xl">#1E1E19</div>
+                        <div class="text-md mb-4 rounded bg-[#000000] p-3 tracking-widest text-white md:p-5 md:text-xl">#000000</div>
+                        <div class="text-md mb-4 rounded border bg-[#E5E3D6] p-3 tracking-widest text-dark md:p-5 md:text-xl">#E5E3D6</div>
+                        <div class="text-md mb-4 rounded border bg-[#FFFFFF] p-3 tracking-widest text-dark md:p-5 md:text-xl">#FFFFFF</div>
                     </div>
                     <div class="md:col-span-12">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Components</h3>
@@ -468,7 +468,7 @@
                 <div class="mx-auto max-w-7xl px-4">
                     <h1 class="mb-8 text-center text-4xl md:text-left lg:text-6xl">More to explore</h1>
                     <div class="grid grid-cols-1 justify-between gap-x-8 gap-y-8 md:grid-cols-2">
-                        <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
+                        <div class="md:flex items-center justify-end gap-x-5 lg:gap-x-8">
                             <a href="ad"><img src="../assets/images/ad-web.png" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             <div>
                                 <a href="ad" class="mb-2 inline-flex items-center rounded-full text-sm uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-xl"></i> Previous </a>
@@ -481,7 +481,7 @@
                         </div>
 
                         <div class="text-right">
-                            <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
+                            <div class="md:flex items-center justify-end gap-x-5 lg:gap-x-8">
                                 <div>
                                     <a href="the-cliff-nepal" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
                                     <a href="the-cliff-nepal" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-xl">Elevating Adventure Tourism: Designing a Breathtaking Digital Experience for The Cliff Nepal</h3></a>
@@ -490,7 +490,7 @@
                                             Travel, Tourism <span class="ml-4 border-l pl-4"><img src="../assets/images/nepal-flag.svg" alt="" class="h-6" /></span></p
                                     ></a>
                                 </div>
-                                <a href="the-cliff-nepal"><img src="../assets/images/cliff-showcase.jpg" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
+                                <a href="the-cliff-nepal"><img src="../assets/images/cliff-showcase.jpg" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110 ml-auto" /></a>
                             </div>
                         </div>
                     </div>
