--- a/works/patientmatic.html
+++ b/works/patientmatic.html
@@ -80,11 +80,11 @@
             <!--Hero-->
             <div class="home-hero relative rounded-b-3xl bg-[#3A52E4] bg-center bg-no-repeat px-4 pt-32 lg:rounded-b-[80px]">
                 <!--Caption-->
-                <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center pt-20 text-center text-white">
+                <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center text-center text-white md:pt-20">
                     <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
                         SaaS, Healthcare <span class="ml-4 border-l pl-4"><img src="../assets/images/flag-USA.avif" alt="" class="h-6" /></span>
                     </p>
-                    <h1 class="mx-auto mb-16 max-w-5xl text-center text-3xl font-bold !leading-snug md:text-5xl xl:text-5xl">Patientmatic - Driving Practice Growth with Instant Online Presence and Seamless Patient Booking</h1>
+                    <h1 class="mx-auto mb-8 max-w-5xl text-center text-3xl font-bold !leading-snug md:mb-16 md:text-5xl xl:text-5xl">Patientmatic - Driving Practice Growth with Instant Online Presence and Seamless Patient Booking</h1>
                     <img src="../assets/images/patientmatci-web.png" alt="" class="rounded-t-lg" />
                 </div>
             </div>
@@ -135,51 +135,53 @@
                         </div>
                     </div>
                 </div>
-                <div class="mt-20">
+
+                <!--Design Process-->
+                <div class="">
                     <h3 class="mb-3 text-2xl lg:text-3xl">Design Process</h3>
-                    <div class="relative mt-20 px-2">
+                    <div class="relative mt-12 px-2 md:mt-20">
                         <div class="">
                             <div class="start flex items-start justify-between">
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#4285F4]"></div></div>
-                                        <div class="uppercase tracking-widest">Research</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#4285F4] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Research</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#4285F4]"></div></div>
-                                        <div class="uppercase tracking-widest">Plan</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#4285F4] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Plan</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#4285F4]"></div></div>
-                                        <div class="uppercase tracking-widest">Design</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#4285F4] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Design</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#4285F4]"></div></div>
-                                        <div class="uppercase tracking-widest">Prototype</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#4285F4] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Prototype</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#4285F4]"></div></div>
-                                        <div class="uppercase tracking-widest">Test</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#4285F4] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Test</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#4285F4]"></div></div>
-                                        <div class="uppercase tracking-widest">Launch</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#4285F4] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Launch</div>
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
-                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#4285F4]"></div></div>
-                                        <div class="uppercase tracking-widest">Optimize</div>
+                                    <div class="relative z-10 flex h-8 w-8 flex-col items-center justify-center md:h-10 md:w-10">
+                                        <div class="mb-8 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#4285F4]/[0.2] md:mb-[28px]"><div class="z-20 h-3 w-3 flex-none rounded-full bg-[#4285F4] md:h-4 md:w-4"></div></div>
+                                        <div class="absolute bottom-[-20px] left-0 right-0 top-auto rotate-90 text-xs uppercase leading-none tracking-widest md:static md:rotate-0">Optimize</div>
                                     </div>
                                 </div>
                             </div>
@@ -193,7 +195,7 @@
         </div>
 
         <!--Banner 1-->
-        <div class="h-screen bg-[url('../images/patientmatic-banner.png')] bg-cover bg-scroll bg-center bg-no-repeat md:bg-fixed"></div>
+        <div class="mt-12 h-[30vh] bg-[url('../images/patientmatic-banner.png')] bg-cover bg-scroll bg-center bg-no-repeat md:mt-0 md:h-screen md:bg-fixed"></div>
         <p class="p-4 text-center font-light italic">Streamlined and intuitive screens designed for seamless patient and dental clinic management.</p>
 
         <!--How it started-->
@@ -360,7 +362,7 @@
                 </ul>
                 <p>Designing the task flows for adding a new profile and creating a new site in Patientmatic involved simplifying user interactions. For profiles, I focused on clear, error-free data entry, while site creation balanced customization with ease of use. Both flows were designed to guide users step-by-step, ensuring a smooth, intuitive experience without overwhelming them with too many choices.</p>
 
-                <img src="../assets/images/pm-legend.png" class="mx-auto mt-8 max-w-xl" alt="" />
+                <img src="../assets/images/pm-legend.png" class="mx-auto mt-8 w-full max-w-xl" alt="" />
 
                 <h3 class="mb-4 mt-12 text-2xl lg:text-3xl">Create a new site</h3>
                 <img src="../assets/images/pm-task-newsite.png" alt="" />
@@ -399,11 +401,11 @@
                     </div>
                     <div class="md:col-span-4">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Color palette</h3>
-                        <div class="mb-4 rounded bg-[#4285F4] p-5 text-xl tracking-widest text-white">#4285F4</div>
-                        <div class="mb-4 rounded bg-[#6A9FF6] p-5 text-xl tracking-widest text-white">#6A9FF6</div>
-                        <div class="mb-4 rounded bg-[#F5F5F5] p-5 text-xl tracking-widest text-dark">#F5F5F5</div>
-                        <div class="mb-4 rounded bg-[#333333] p-5 text-xl tracking-widest text-white">#333333</div>
-                        <div class="mb-4 rounded border bg-[#FFFFFF] p-5 text-xl tracking-widest text-dark">#FFFFFF</div>
+                        <div class="mb-4 rounded bg-[#4285F4] p-3 md:p-5 text-md md:text-xl tracking-widest text-white">#4285F4</div>
+                        <div class="mb-4 rounded bg-[#6A9FF6] p-3 md:p-5 text-md md:text-xl tracking-widest text-white">#6A9FF6</div>
+                        <div class="mb-4 rounded bg-[#F5F5F5] p-3 md:p-5 text-md md:text-xl tracking-widest text-dark">#F5F5F5</div>
+                        <div class="mb-4 rounded bg-[#333333] p-3 md:p-5 text-md md:text-xl tracking-widest text-white">#333333</div>
+                        <div class="mb-4 rounded border bg-[#FFFFFF] p-3 md:p-5 text-md md:text-xl tracking-widest text-dark">#FFFFFF</div>
                     </div>
                 </div>
             </div>
@@ -495,7 +497,7 @@
                 <div class="mx-auto max-w-7xl px-4">
                     <h1 class="mb-8 text-center text-4xl md:text-left lg:text-6xl">More to explore</h1>
                     <div class="grid grid-cols-1 justify-between gap-x-8 gap-y-8 md:grid-cols-2">
-                        <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
+                        <div class="items-center justify-end gap-x-5 md:flex lg:gap-x-8">
                             <a href="insellerate"><img src="../assets/images/insellerate.png" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             <div>
                                 <a href="insellerate" class="mb-2 inline-flex items-center rounded-full text-sm uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-xl"></i> Previous </a>
@@ -508,7 +510,7 @@
                         </div>
 
                         <div class="text-right">
-                            <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
+                            <div class="items-center justify-end gap-x-5 md:flex lg:gap-x-8">
                                 <div>
                                     <a href="ad" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
                                     <a href="ad" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-xl">Optimizing Design and Code for anydone: Crafting a Responsive, Pixel-Perfect Web Experience</h3></a>
@@ -517,7 +519,7 @@
                                             SaaS, Productivity <span class="ml-4 border-l pl-4"><img src="../assets/images/flag-USA.avif" alt="" class="h-6" /></span></p
                                     ></a>
                                 </div>
-                                <a href="ad"><img src="../assets/images/ad-web.png" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
+                                <a href="ad"><img src="../assets/images/ad-web.png" alt="" class="ml-auto h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             </div>
                         </div>
                     </div>
