Update: Based in UAE with flag

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 
                     <div class="flex flex-col items-center text-sm font-light uppercase tracking-widest md:flex-row lg:text-xl">
                         <div class="flex items-center">
-                            <span>A UI/UX Designer based in <span class="font-bold">Nepal</span></span
-                            ><img src="assets/images/nepal-flag.svg" alt="" class="mx-3 h-6" />
+                            <span>A UI/UX Designer based in <span class="font-bold">UAE</span></span
+                            ><img src="assets/images/uae-flag.svg" alt="" class="mx-3 h-6" />
                         </div>
                         <span>Available Worldwide</span>
                     </div>
