About iMage change

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
                         <a href="assets/pdf/Milan-UI_UX-Designer.pdf" class="mt-8 inline-flex items-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400" target="_blank">Download my CV <i class="las la-arrow-right ml-2 text-3xl"></i></a>
                     </div>
                     <div>
-                        <img src="assets/images/about-photo.jpg" alt="" class="aspect-square rounded-full object-cover object-top" />
+                        <img src="assets/images/about.jpeg" alt="" class="aspect-square rounded-full object-cover object-top" />
                     </div>
                 </div>
             </div>
